--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,8 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = ["shell-open"] }
+tauri = { version = "1", features = ["macos-private-api", "shell-open"] }
+tauri-plugin-positioner = "1.0.5"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
