--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,7 @@ tauri = { version = "1", features = ["fs-create-dir", "fs-read-dir", "fs-read-fi
 tauri-plugin-positioner = "1.0.5"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+window-vibrancy = "0.4.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
